miRkwood: Fix spacing in results page

--- a/html/style/script.css
+++ b/html/style/script.css
@@ -126,7 +126,7 @@ pre
 #table
 {
 	width:750px;
-        margin-top:10px;
+        margin-top:20px;
 }
 #seq
 {
